<resources>
    <string name="app_name">My Application</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">"Presseed: "</string>
    <string name="about_me">About me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="press">press</string>
    <string name="back">Back</string>
    <string name="text">text</string>
    <string name="link_collector">Link Collector</string>
    <string name="url">url</string>
    <string name="name">name</string>
    <string name="todo">TODO</string>
    <string name="url_name">URL name</string>
    <string name="url_link">URL</string>
    <string name="button">Button</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="prime_number">PRIME NUMBER</string>
    <string name="find_primes">FIND PRIMES</string>
    <string name="terminate_search">TERMINATE SEARCH</string>
    <string name="current_number">Current Number:</string>
    <string name="prime_num">Prime number:</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="_2">2</string>
    <string name="checkbox">checkbox</string>
    <string name="Latitude">TextView</string>
    <string name="change_precision">CHANGE PRECISION</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="total_distance">Total Distance</string>
    <string name="reset_distance">Reset Distance</string>
    <string name="gps_savepower">GPS/SavePower</string>
    <string name="textview1">TextView</string>
    <string name="tv_sensor">TextView</string>
    <string name="c_precision">CHANGE PRECISION</string>
    <string name="accuracy">Accuracy</string>
    <string name="weather_update">Weather update</string>
    <string name="check_weather">Check Weather</string>
    <string name="enter_country_code_optional">Enter Country Code(optional)</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="weather_updates">WEATHER UPDATE</string>


</resources>