<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="289dp"
        android:layout_height="105dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="76dp"

        android:useDefaultMargins="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="onBtnClicked"
            android:text="@string/a"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="onBtnClicked"
            android:text="@string/d"
            app:layout_column="0"
            app:layout_row="1"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:onClick="onBtnClicked"
            android:text="@string/b"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="5"
            android:onClick="onBtnClicked"
            android:text="@string/c"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:onClick="onBtnClicked"
            android:text="@string/e"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="5"
            android:onClick="onBtnClicked"
            android:text="@string/f"
            app:layout_column="2"
            app:layout_row="1" />

    </GridLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="108dp"
        android:text="@string/pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gridLayout2" />

    <Button
        android:id="@+id/button22"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"


        android:onClick="goBack"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
