<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b_findPrimes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="searchThread"
        android:text="@string/find_primes"
        app:layout_constraintBottom_toTopOf="@+id/b_terminateSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_terminateSearch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/terminate_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginStart="106dp"
        android:text="@string/prime_num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/tv_currentNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv3"
        app:layout_constraintStart_toEndOf="@+id/tv3" />

    <TextView
        android:id="@+id/tv_currentPrime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/tv_currentNum"
        app:layout_constraintVertical_bias="0.906" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />


</androidx.constraintlayout.widget.ConstraintLayout>