<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_city_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"></EditText>

        <EditText
            android:id="@+id/etCountyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_country_code_optional"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"></EditText>

        <Button
            android:id="@+id/bt_getWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:onClick="getWeatherDetails"
            android:text="@string/check_weather"></Button>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tv_weatherDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>
        </ScrollView>


    </LinearLayout>



</LinearLayout>