<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_1"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="186dp"
        android:layout_marginBottom="13dp"
        android:text="@string/about_me"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginBottom="9dp"
        android:text="@string/clicky_clicky"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginBottom="260dp"
        android:text="@string/link_collector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="254dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="348dp"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>